refactor: rename project to ProxyIdentity